
- QBool is gone. QString::contains, QByteArray::contains, and QList::contains
  used to return an internal QBool class so that the Qt3 code
  "if (a.contains() == 2)" wouldn't compile anymore. Such code cannot exist
  in Qt4, so these methods return a bool now. If your code used the undocumented
  QBool, simply replace it with bool.

- qIsDetached<> has been removed without replacement.

- QMetaType:
  * QMetaType::construct() has been renamed to QMetaType::create().
  * QMetaType::unregisterType() has been removed.
  * QMetaType now records if the type argument inherits QObject. This
    can be used in scripting APIs, so that custom QObject subclasses
    are treated as QObject pointers. In QtScript for example, this can
    mean that QScriptValue.isQObject can be true where it was false before.
  * QMetaType::QWidgetStar has been removed. Use qMetaTypeId<QWidget*>()
    or QVariant::canConvert<QWidget*>() as appropriate.

- QMetaMethod:
  * QMetaMethod::signature() has been renamed to QMetaMethod::methodSignature(),
    and the return type has been changed to QByteArray. This was done to be able
    to generate the signature string on demand, rather than always storing it in
    the meta-data.
  * QMetaMethod::typeName() no longer returns an empty string when the return
    type is void; it returns "void". The recommended way of checking whether a
    method returns void is to compare the return value of QMetaMethod::returnType()
    to QMetaType::Void.

- QVariant:
  * Inconsistent constructor taking Qt::GlobalColor and producing QVariant(QColor)
    instance was removed. Code constructing such variants can be migrated by
    explicitly calling QColor constructor. For example from "QVariant(Qt::red)"
    to "QVariant(QColor(Qt::red))"

- QTestLib:
  * The plain-text, xml and lightxml test output formats have been changed to
    show a test result for every row of test data in data-driven tests.  In