@@ -172,6 +172,15 @@ Q_CORE_EXPORT void *qMemSet(void *dest, int c, size_t n);
 */
 
 /*!
+    \typedef QFlags::Int
+    \since 5.0
+
+    Typedef for the integer type used for storage as well as for
+    implicit conversion. Either \c int or \c{unsigned int}, depending
+    on whether the enum's underlying type is signed or unsigned.
+*/
+
+/*!
     \typedef QFlags::enum_type
 
     Typedef for the Enum template type.
@@ -261,9 +270,11 @@ Q_CORE_EXPORT void *qMemSet(void *dest, int c, size_t n);
 */
 
 /*!
-    \fn QFlags::operator int() const
+    \fn QFlags::operator Int() const
 
     Returns the value stored in the QFlags object as an integer.
+
+    \sa Int
 */
 
 /*!
